Basic implementation of Books endpoint
